Conclusão do projeto Unes
Finalização do projeto UNES. Foram criadas e estruturadas as seções "Quem Somos" e "Contato", encerrando o desenvolvimento das páginas principais.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body background="Imagens/fundo.png">
  <div style="text-align: center; font-size: x-large;" > 
-    <img src="Imagens/logo.png" alt=""> <br> <a href="index.html">Home </a>  | <a href="quem-somos.html" target="_blank"> Quem somos </a> <a href="contato.html">| Contato</a>
+    <img src="Imagens/logo.png" alt=""> <br> <a href="index.html">Home </a>  | <a href="quem-somos.html" > Quem somos </a> <a href="contato.html">| Contato</a>
 </div>
 <div style="text-align: center;">
   <img src="Imagens/capa.png" alt="Imagem centralizada">
